tests/paczka1/small_fuzzy/42829493.err
Error in line 10: D9wHdCsZ A482 87,2
Error in line 8: QWQGH95P5H A482 256,5
